force-app/main/default/objects/Hotel__c/fields/dumm__c.field-meta.xml
<CustomField>
    <fullName>dumm__c</fullName>
    <label>dumm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>