force-app/main/default/objects/Hotel__c/fields/Dummy123__c.field-meta.xml
<CustomField>
    <fullName>Dummy123__c</fullName>
    <label>Dummy123</label>
    <length>120</length>
    <type>Text</type>
</CustomField>