force-app/main/default/objects/Hotel__c/fields/ee__c.field-meta.xml
<CustomField>
    <fullName>ee__c</fullName>
    <label>ee</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>