force-app/main/default/objects/Hotel__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Manager&apos;s Email</label>
    <type>Email</type>
</CustomField>