force-app/main/default/objects/Hotel__c/fields/jas__c.field-meta.xml
<CustomField>
    <fullName>jas__c</fullName>
    <label>jas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>