force-app/main/default/objects/Hotel__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>