force-app/main/default/objects/Hotel__c/fields/r232__c.field-meta.xml
<CustomField>
    <fullName>r232__c</fullName>
    <label>r232</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>