force-app/main/default/objects/Hotel__c/fields/temnp111__c.field-meta.xml
<CustomField>
    <fullName>temnp111__c</fullName>
    <label>temnp111</label>
    <length>11</length>
    <type>Text</type>
</CustomField>