force-app/main/default/objects/Hotel__c/fields/temp10__c.field-meta.xml
<CustomField>
    <fullName>temp10__c</fullName>
    <label>temp10</label>
    <length>10</length>
    <type>Text</type>
</CustomField>