force-app/main/default/objects/Hotel__c/fields/temp111__c.field-meta.xml
<CustomField>
    <fullName>temp111__c</fullName>
    <label>temp111</label>
    <length>111</length>
    <type>Text</type>
</CustomField>