force-app/main/default/objects/Hotel__c/fields/temp11__c.field-meta.xml
<CustomField>
    <fullName>temp11__c</fullName>
    <label>temp11</label>
    <length>10</length>
    <type>Text</type>
</CustomField>