force-app/main/default/objects/Hotel__c/fields/X12__c.field-meta.xml
<CustomField>
    <fullName>X12__c</fullName>
    <label>12</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>